deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: gyazo
  labels:
    app: gyazo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gyazo
  template:
    metadata:
      labels:
        app: gyazo
    spec:
      containers:
        - name: gyazo
          image: docker.pkg.github.com/imhugofonseca/go-gyazo/gyazo
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
      imagePullSecrets:
        - name: github-registry 
---
apiVersion: v1
kind: Service
metadata:
  name: gyazo
  namespace: default
  labels:
    app: gyazo
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: gyazo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gyazo-route
  namespace: default
  labels:
    app: gyazo
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`upload.img.hugo.gg`)
    kind: Rule
    services:
    - name: gyazo
      port: 80
